src/compiler/parser.c
//
// Created by ran on 2024-03-24.
//
#include <stdbool.h>
#include <stdio.h>
#include <stdlib.h>
#include "parser.h"
#include "list/linked_list.h"
#include "zjson.h"
#include <string.h>
#include <errno.h>
#include <limits.h>
#ifdef ALLOC_TESTING
#include "common/alloc-testing.h"
#endif
#ifdef WASM_LOG
#include <emscripten/emscripten.h>
#endif
typedef enum {
  PREC_NONE,
  PREC_ASSIGNMENT, // =
  PREC_CONDITIONAL, // ? :
  PREC_OR, // or
  PREC_AND, // and
  PREC_EQUALITY, // == !=
  PREC_COMPARISON, // < > <= >=
  PREC_TERM, // + -
  PREC_FACTOR, // * /
  PREC_EXPONENT, // ^
  PREC_PREFIX, // ! -
  PREC_POSTFIX, // !
  PREC_CALL, // . () []
  PREC_PRIMARY // literals
} Precedence;

DEFINE_ARRAY_LIST(NULL, Statement)

DEFINE_ARRAY_LIST((Token) {.type=TOKEN_ERROR}, Token)

#define LITERAL_EXP(v, line_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = LITERAL_EXPR;\
                              e->value = v;                              \
                              e->line=line_; \
                              e;\
                           })

#define PREFIX_EXP(token_type, r, line_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = PREFIX_EXPR;\
                              e->prefix.operator = token_type;                 \
                              e->prefix.right = r;                       \
                              e->line=line_; \
                              e;\
                           })

#define ID_EXP(identifier_name) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = VARIABLE_EXPR;\
                              e->variable.name = identifier_name;      \
                              e->line=identifier_name.line; \
                              e;\
                           })

#define THIS_EXP(identifier_name) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = THIS_EXPR;\
                              e->this_.this_ = identifier_name;      \
                              e->line=identifier_name.line; \
                              e;\
                           })

#define SUPER_EXP(identifier_name) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = SUPER_EXPR;\
                              e->super_.super_ = identifier_name;      \
                              e->line=identifier_name.line; \
                              e;\
                           })

#define OPERATOR_EXP(l, op, r, line_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = OPERATOR_EXPR;\
                              e->operator.left = l;                   \
                              e->operator.operator = op;                 \
                              e->operator.right = r;                     \
                              e->line=line_; \
                              e;\
                           })

#define OR_EXP(l, r, line_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = OR_EXPR;\
                              e->or.left = l;                   \
                              e->or.right = r;                     \
                              e->line=line_; \
                              e;\
                           })

#define AND_EXP(l, r, line_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = AND_EXPR;\
                              e->and.left = l;                   \
                              e->and.right = r;                     \
                              e->line=line_; \
                              e;\
                           })

#define POSTFIX_EXP(token_type, l, line_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = POSTFIX_EXPR;\
                              e->postfix.left = l;                   \
                              e->postfix.operator = token_type;         \
                              e->line=line_; \
                              e;\
                           })

#define CONDITIONAL_EXP(con, then_, else_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = CONDITIONAL_EXPR;\
                              e->conditional.condition = con;                   \
                              e->conditional.then_exp = then_;        \
                              e->conditional.else_exp = else_;                 \
                              e;\
                           })

#define ASSIGN_EXP(n, r) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = ASSIGN_EXPR;\
                              e->assign.name = n;                   \
                              e->assign.right = r;                       \
                              e->line=n.line;\
                              e;\
                           })

#define SET_EXP(obj_, name_, value_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = SET_EXPR;\
                              e->set.name = name_;                       \
                              e->line=name_.line;\
                              e->set.object = obj_;                      \
                              e->set.value=value_;\
                              e;\
                           })

#define GET_EXP(obj_, name_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = GET_EXPR;\
                              e->get.name = name_;                       \
                              e->line=name_.line;\
                              e->get.object = obj_;                      \
                              e;\
                           })
#define CALL_EXP(func, arg_nums, arg_list, line_) ({\
                              Expression *e = malloc(sizeof(Expression)); \
                              e->type = CALL_EXPR;\
                              e->line = line_;                     \
                              e->call.function = func;                   \
                              e->call.arg_num = arg_nums;                 \
                              e->call.args = (arg_list);        \
                              e;\
                           })
#define INDEXING_EXP(obj_, index_, line_) ({\
                              Expression *e = malloc(sizeof(Expression)); \
                              e->type = INDEXING_EXPR;\
                              e->line = line_;                     \
                              e->indexing.object = (obj_);                   \
                              e->indexing.index = (index_);        \
                              e;\
                           })
#define SLICING_EXP(obj_, index0_, index1_, line_) ({\
                              Expression *e = malloc(sizeof(Expression)); \
                              e->type = SLICING_EXPR;\
                              e->line = line_;                     \
                              e->slicing.object = (obj_);                   \
                              e->slicing.index0 = (index0_);              \
                              e->slicing.index1 = (index1_);        \
                              e;\
                           })
#define ELEMENT_ASSIGN_EXP(object_, index_, right_, line_) ({\
                              Expression *e = malloc(sizeof(Expression)); \
                              e->type = ELEMENT_ASSIGN_EXPR;\
                              e->line = line_;                     \
                              e->element_assign.object = (object_);                   \
                              e->element_assign.index_ = (index_);        \
                              e->element_assign.right = (right_);   \
                              e;\
                           })
#define ARR_EXP(ele_nums, ele_list, line_) ({\
                              Expression *e = malloc(sizeof(Expression)); \
                              e->type = ARRAY_EXPR;\
                              e->line = line_;                     \
                              e->array.size = ele_nums;                 \
                              e->array.elements = (ele_list);        \
                              e;\
                           })
#define FUNC_EXP(params_num_, parameters_, body_) ({\
                              Expression *e = malloc(sizeof(Expression));\
                              e->type = FUNC_EXPR;\
                              e->function.param_num = params_num_;\
                              e->function.parameters = parameters_;\
                              e->function.body = body_;\
                              e;\
                          })

#define PRINT_STMTS(exp, line_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = PRINT_STMT;                       \
                                 stmt->line = line_;                             \
                                 stmt->print_expr = (exp);                      \
                                 stmt;\
                               })

#define EXPR_STMTS(exp, line_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = EXPRESSION_STMT;                       \
                                 stmt->line = line_;                             \
                                 stmt->expression = (exp);                      \
                                 stmt;\
                               })

#define VAR_DECL_STMTS(t, exp, line_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = VAR_DECL_STMT;                       \
                                 stmt->line = line_;                             \
                                 stmt->var_decl.name = (t);                    \
                                 stmt->var_decl.initializer = (exp);  \
                                 stmt;\
                               })

#define CLASS_DECL_STMTS(cname, sname, methods_, methods_num_, static_methods_, static_methods_num_, line_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = CLASS_STMT;                      \
                                 stmt->line = line_;         \
                                 stmt->class_stmt.name = (cname);                    \
                                 stmt->class_stmt.super_class = (sname);                                       \
                                 stmt->class_stmt.methods = methods_;                                                     \
                                 stmt->class_stmt.methods_num = methods_num_;                                             \
                                 stmt->class_stmt.static_methods = static_methods_;            \
                                 stmt->class_stmt.static_methods_num = static_methods_num_;             \
                                 stmt;\
                               })

#define BLOCK_STMTS(stmts, n, line_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = BLOCK_STMT;                      \
                                 stmt->line=line_;      \
                                 stmt->block.statements = stmts;                             \
                                 stmt->block.stmt_nums = n;                    \
                                 stmt;\
                               })

#define IF_STMTS(cond, then_stmt_, else_stmt_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = IF_STMT;                       \
                                 stmt->if_stmt.condition = (cond);                             \
                                 stmt->if_stmt.then_stmt = (then_stmt_);                    \
                                 stmt->if_stmt.else_stmt = (else_stmt_);                    \
                                 stmt;\
                               })
#define WHILE_STMTS(cond, body_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = WHILE_STMT;                       \
                                 stmt->while_stmt.condition = (cond);                             \
                                 stmt->while_stmt.body = (body_);              \
                                 stmt;\
                               })
#define FOR_STMTS(init_, cond_, incre_, body_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = FOR_STMT;                        \
                                 stmt->for_stmt.initializer = (init_); \
                                 stmt->for_stmt.condition = (cond_);           \
                                 stmt->for_stmt.increment = (incre_);      \
                                 stmt->for_stmt.body = (body_);              \
                                 stmt;\
                               })
#define CONTINUE_STMTS(token_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = CONTINUE_STMT;                        \
                                 stmt->continue_stmt.token = (token_); \
                                 stmt;\
                               })
#define BREAK_STMTS(token_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = BREAK_STMT;                        \
                                 stmt->continue_stmt.token = (token_); \
                                 stmt;\
                               })
#define RETURN_STMTS(token_, exp_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = RETURN_STMT;                     \
                                 stmt->line = token_.line;\
                                 stmt->return_stmt.keyword = (token_);           \
                                 stmt->return_stmt.value = (exp_); \
                                 stmt;\
                               })

#define FUNC_STMTS(name_, func_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = FUNC_STMT;                       \
                                 stmt->line=(name_).line;   \
                                 stmt->function_stmt.name = (name_); \
                                 stmt->function_stmt.function = (func_); \
                                 stmt;\
                               })

#define IMPORT_STMTS(name_, as_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = IMPORT_STMT;                       \
                                 stmt->line=(name_).line;   \
                                 stmt->import_stmt.lib = (name_); \
                                 stmt->import_stmt.as = (as_); \
                                 stmt;\
                               })

#define TRY_STMTS(try_block_, catch_stmt_, finally_block_, catch_nums_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = TRY_STMT;                       \
                                 stmt->try_stmt.try_block = (try_block_); \
                                 stmt->try_stmt.catch_stmt = (catch_stmt_);    \
                                  stmt->try_stmt.finally_block = (finally_block_); \
                                  stmt->try_stmt.catch_nums = (catch_nums_); \
                                  stmt;\
                               })

#define CATCH_STMTS(catch_block_, exception_, as_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = CATCH_STMT;                       \
                                 stmt->catch_stmt.catch_block = (catch_block_); \
                                 stmt->catch_stmt.as = (as_);                  \
                                 stmt->catch_stmt.catch_exception = (exception_); \
                                 stmt;\
                               })

#define THROW_STMTS(kw_, throwable_) ({ \
                                 Statement* stmt = malloc(sizeof(Statement));  \
                                 stmt->type = THROW_STMT;                      \
                                  stmt->line=(kw_).line;   \
                                 stmt->throw_stmt.kw = (kw_); \
                                 stmt->throw_stmt.throwable = (throwable_);                  \
                                 stmt;\
                               })

typedef Expression *(*ParseFn)(Parser *parser, Token token, Expression *left);

typedef struct {
  // the function to compile a prefix expression starting with a token of that type
  ParseFn prefix;
  // the function to compile an infix expression whose left operand is followed by a token of that type
  ParseFn infix;
  // The precedence of an infix expression that uses that token as an operator.
  //  We don’t need to track the precedence of the prefix expression starting with a given
  //  token because all prefix operators have the same precedence
  Precedence precedence;
} ParseRule;

static void error_at_current(Parser *parser, const char *msg);
static void error(Parser *parser, const char *msg);
static void error_at(Parser *parser, Token *token, const char *msg);
static void advance(Parser *parser);
static void consume(Parser *parser, TokenType type, const char *msg);
static bool check(Parser *parser, TokenType type);
static bool match(Parser *parser, TokenType type);
static void synchronize(Parser *parser);

static Expression *parse_expression(Parser *parser, Precedence precedence);
static void free_expression(Parser *parser, Expression *e);

static ParseRule *get_rule(Parser *parser, TokenType type);
static Precedence precedence_of(Parser *parser, TokenType type);
static bool is_right_associative(Parser *parser, TokenType type);

static Statement *declaration(Parser *parser);
static Statement *statement(Parser *parser);
static Statement *print_statement(Parser *parser);
static Statement *expression_statement(Parser *parser);
static Statement *var_declaration(Parser *parser);
static Statement *fun_declaration(Parser *parser, bool is_method, bool is_static);
static Statement *block(Parser *parser);
static Statement *if_statement(Parser *parser);
static Statement *while_statement(Parser *parser);
static Statement *for_statement(Parser *parser);
static Statement *continue_statement(Parser *parser);
static Statement *break_statement(Parser *parser);
static Statement *return_statement(Parser *parser);
static Statement *class_declaration(Parser *parser);
static Statement *import_statement(Parser *parser);
static Statement *try_statement(Parser *parser);
static Statement *catch_statement(Parser *parser);
static Statement *throw_statement(Parser *parser);

static Expression *expression(Parser *parser);
static Expression *number(Parser *parser, Token token, Expression *left);
static Expression *nil(Parser *parser, Token token, Expression *left);
static Expression *boolean_value(Parser *parser, Token token, Expression *left);
static Expression *this_(Parser *parser, Token token, Expression *left);
static Expression *super_(Parser *parser, Token token, Expression *left);
static Expression *string(Parser *parser, Token token, Expression *left);
static Expression *grouping(Parser *parser, Token token, Expression *left);
static Expression *unary(Parser *parser, Token token, Expression *left);
static Expression *binary(Parser *parser, Token token, Expression *left);
static Expression *conditional(Parser *parser, Token token, Expression *left);
static Expression *identifier(Parser *parser, Token token, Expression *left);
static Expression *call(Parser *parser, Token token, Expression *left);
static Expression *fun_or_call(Parser *parser, Token token, Expression *left);
static Expression *lambda(Parser *parser, Token token, Expression *left);
static Expression *assign(Parser *parser, Token token, Expression *left);
static Expression *postfix(Parser *parser, Token token, Expression *left);
static Expression *getter(Parser *parser, Token token, Expression *left);
static Expression *or(Parser *parser, Token token, Expression *left);
static Expression *and(Parser *parser, Token token, Expression *left);
static Expression *array(Parser *parser, Token token, Expression *left);
static Expression *indexing_or_slicing(Parser *parser, Token token, Expression *left);

static json_value *expression_printer(Parser *parser, Expression *expression);
static json_value *statement_printer(Parser *parser, Statement *statement);
static json_value *tree_json(Parser *parser, ParseTree *tree);
static char *print_tree(Parser *parser, ParseTree *tree);

ParseRule rules[] = {
    [TOKEN_LEFT_PAREN] = {grouping, fun_or_call, PREC_CALL},
    [TOKEN_RIGHT_PAREN] = {NULL, NULL, PREC_NONE},
    [TOKEN_LEFT_BRACE] = {NULL, NULL, PREC_NONE},
    [TOKEN_RIGHT_BRACE] = {NULL, NULL, PREC_NONE},
    [TOKEN_LEFT_BRACKET] = {array, indexing_or_slicing, PREC_CALL},
    [TOKEN_RIGHT_BRACKET] = {NULL, NULL, PREC_NONE},
    [TOKEN_COMMA] = {NULL, NULL, PREC_NONE},
    [TOKEN_DOT] = {NULL, getter, PREC_CALL},
    [TOKEN_MINUS] = {unary, binary, PREC_TERM},
    [TOKEN_PLUS] = {NULL, binary, PREC_TERM},
    [TOKEN_SEMICOLON] = {NULL, NULL, PREC_NONE},
    [TOKEN_SLASH] = {NULL, binary, PREC_FACTOR},
    [TOKEN_STAR] = {NULL, binary, PREC_FACTOR},
    [TOKEN_QUESTION] = {NULL, conditional, PREC_CONDITIONAL},
    [TOKEN_EXPONENT] = {NULL, binary, PREC_EXPONENT},
    [TOKEN_COLON] = {NULL, NULL, PREC_NONE},
    [TOKEN_BANG] = {unary, postfix, PREC_POSTFIX},
    [TOKEN_PERCENT] = {NULL, binary, PREC_FACTOR},
    [TOKEN_BANG_EQUAL] = {NULL, binary, PREC_EQUALITY},
    [TOKEN_EQUAL] = {NULL, assign, PREC_ASSIGNMENT},
    [TOKEN_EQUAL_EQUAL] = {NULL, binary, PREC_EQUALITY},
    [TOKEN_GREATER] = {NULL, binary, PREC_COMPARISON},
    [TOKEN_GREATER_EQUAL] = {NULL, binary, PREC_COMPARISON},
    [TOKEN_LESS] = {NULL, binary, PREC_COMPARISON},
    [TOKEN_LESS_EQUAL] = {NULL, binary, PREC_COMPARISON},
    [TOKEN_IDENTIFIER] = {identifier, NULL, PREC_NONE},
    [TOKEN_STRING] = {string, NULL, PREC_NONE},
    [TOKEN_INTERPOLATION] = {NULL, NULL, PREC_NONE},
    [TOKEN_NUMBER] = {number, NULL, PREC_NONE},
    [TOKEN_AND] = {NULL, and, PREC_AND},
    [TOKEN_CLASS] = {NULL, NULL, PREC_NONE},
    [TOKEN_ELSE] = {NULL, NULL, PREC_NONE},
    [TOKEN_FALSE] = {boolean_value, NULL, PREC_NONE},
    [TOKEN_FOR] = {NULL, NULL, PREC_NONE},
    [TOKEN_FUN] = {NULL, NULL, PREC_NONE},
    [TOKEN_IF] = {NULL, NULL, PREC_NONE},
    [TOKEN_NIL] = {nil, NULL, PREC_NONE},
    [TOKEN_OR] = {NULL, or, PREC_OR},
    [TOKEN_PRINT] = {NULL, NULL, PREC_NONE},
    [TOKEN_RETURN] = {NULL, NULL, PREC_NONE},
    [TOKEN_SUPER] = {super_, NULL, PREC_NONE},
    [TOKEN_THIS] = {this_, NULL, PREC_NONE},
    [TOKEN_TRUE] = {boolean_value, NULL, PREC_NONE},
    [TOKEN_VAR] = {NULL, NULL, PREC_NONE},
    [TOKEN_WHILE] = {NULL, NULL, PREC_NONE},
    [TOKEN_IMPORT] = {NULL, NULL, PREC_NONE},
    [TOKEN_AS] = {NULL, NULL, PREC_NONE},
    [TOKEN_LAMBDA] = {lambda, NULL, PREC_NONE},
    [TOKEN_ERROR] = {NULL, NULL, PREC_NONE},
    [TOKEN_EOF] = {NULL, NULL, PREC_NONE},
};

int parse(Parser *parser, const char *source, StatementArrayList **array_list) {
  if (*array_list == NULL) *array_list = Statementnew_arraylist(32);
  // init parser
  Scanner scanner;
  init_scanner(&scanner, source);
  parser->panic_mode = false;
  parser->has_err = false;
  parser->scanner = &scanner;
  parser->loop_depth = 0;
  parser->func_depth = 0;
  parser->class_depth = 0;
  parser->static_method_depth = 0;

  advance(parser);
  while (!match(parser, TOKEN_EOF)) {
    Statementappend_arraylist(*array_list, declaration(parser));
  }
  consume(parser, TOKEN_EOF, "Expect end of expression.");
  return parser->has_err ? PARSE_ERROR : PARSE_OK;
}

size_t eof_line(Parser *parser) {
  return parser->has_err ? 0 : parser->prev.line;;
}
bool has_error(Parser *parser) {
  return parser->has_err;
}

static void free_expression(Parser *parser, Expression *expression) {
  if (expression == NULL) return;
  ParseType type = expression->type;
  switch (type) {
    case ASSIGN_EXPR: {
      free_expression(parser, expression->assign.right);
      free(expression);
      return;
    }
    case CALL_EXPR: {
      free_expression(parser, expression->call.function);

      if (expression->call.arg_num > 0) {
        for (int i = 0; i < expression->call.arg_num; ++i) {
          free_expression(parser, expression->call.args[i]);
        }
        free(expression->call.args);
      }
      free(expression);
      return;
    }
    case ARRAY_EXPR: {
      if (expression->array.size > 0) {
        for (int i = 0; i < expression->array.size; ++i) {
          free_expression(parser, expression->array.elements[i]);
        }
        free(expression->array.elements);
      }
      free(expression);
      return;
    }
    case INDEXING_EXPR: {
      free_expression(parser, expression->indexing.object);
      free_expression(parser, expression->indexing.index);
      free(expression);
      return;
    }
    case SLICING_EXPR: {
      free_expression(parser, expression->slicing.object);
      free_expression(parser, expression->slicing.index0);
      free_expression(parser, expression->slicing.index1);
      free(expression);
      return;
    }
    case ELEMENT_ASSIGN_EXPR: {
      free_expression(parser, expression->element_assign.object);
      free_expression(parser, expression->element_assign.index);
      free_expression(parser, expression->element_assign.right);
      free(expression);
      return;
    }
    case GET_EXPR: {
      free_expression(parser, expression->get.object);
      free(expression);
      return;
    }
    case SET_EXPR: {
      free_expression(parser, expression->set.object);
      free_expression(parser, expression->set.value);
      free(expression);
      return;
    }
    case CONDITIONAL_EXPR: {
      free_expression(parser, expression->conditional.condition);
      free_expression(parser, expression->conditional.then_exp);
      free_expression(parser, expression->conditional.else_exp);
      free(expression);
      return;
    }
    case VARIABLE_EXPR: {
      free(expression);
      return;
    }
    case THIS_EXPR: {
      free(expression);
      return;
    }
    case SUPER_EXPR: {
      free(expression);
      return;
    }
    case OPERATOR_EXPR: {
      free_expression(parser, expression->operator.left);
      free_expression(parser, expression->operator.right);
      free(expression);
      return;
    }
    case PREFIX_EXPR: {
      free_expression(parser, expression->prefix.right);
      free(expression);
      return;
    }
    case POSTFIX_EXPR: {
      free_expression(parser, expression->postfix.left);
      free(expression);
      return;
    }
    case OR_EXPR: {
      free_expression(parser, expression->or.left);
      free_expression(parser, expression->or.right);
      free(expression);
      return;
    }
    case AND_EXPR: {
      free_expression(parser, expression->and.left);
      free_expression(parser, expression->and.right);
      free(expression);
      return;
    }
    case LITERAL_EXPR: {
      if (IS_OBJ(expression->value)) {
#ifdef DEBUG_TRACE_EXECUTION
        printf("free literal expr: ");
#endif
        free_object(AS_OBJ(expression->value));
      }
      free(expression);
      return;
    }
    case FUNC_EXPR: {
      if (expression->function.parameters != NULL) {
        free(expression->function.parameters);
      }
      free_statement(parser, expression->function.body);
      free(expression);
      return;
    }
    default: {
      return;
    }
  }
}

static bool is_statement(ParseType type) {
  return type >= PRINT_STMT;
}

void free_statement(Parser *parser, Statement *statement) {
  if (statement == NULL)return;
  ParseType type = statement->type;
  switch (type) {
    case PRINT_STMT: {
      free_expression(parser, statement->print_expr);
      free(statement);
      return;
    }
    case RETURN_STMT: {
      free_expression(parser, statement->return_stmt.value);
      free(statement);
      return;
    }
    case EXPRESSION_STMT: {
      free_expression(parser, statement->expression);
      free(statement);
      return;
    }
    case VAR_DECL_STMT: {
      free_expression(parser, statement->var_decl.initializer);
      free(statement);
      return;
    }
    case BLOCK_STMT: {
      for (int i = 0; i < statement->block.stmt_nums; ++i) {
        free_statement(parser, statement->block.statements[i]);
      }
      free(statement->block.statements);
      free(statement);
      return;
    }
    case IF_STMT: {
      free_expression(parser, statement->if_stmt.condition);
      free_statement(parser, statement->if_stmt.then_stmt);
      free_statement(parser, statement->if_stmt.else_stmt);
      free(statement);
      return;
    }
    case WHILE_STMT: {
      free_expression(parser, statement->while_stmt.condition);
      free_statement(parser, statement->while_stmt.body);
      free(statement);
      return;
    }
    case FOR_STMT: {
      free_statement(parser, statement->for_stmt.initializer);
      free_expression(parser, statement->for_stmt.condition);
      free_expression(parser, statement->for_stmt.increment);
      free_statement(parser, statement->for_stmt.body);
      free(statement);
      return;
    }
    case CONTINUE_STMT: {
      free(statement);
      return;
    }
    case BREAK_STMT: {
      free(statement);
      return;
    }
    case FUNC_STMT: {
      free_expression(parser, statement->function_stmt.function);
      free(statement);
      return;
    }
    case IMPORT_STMT: {
      free_expression(parser, statement->import_stmt.as);
      free(statement);
      return;
    }
    case TRY_STMT: {
      free_statement(parser, statement->try_stmt.try_block);
      for (int i = 0; i < statement->try_stmt.catch_nums; ++i) {
        free_statement(parser, statement->try_stmt.catch_stmt[i]);
      }
      free(statement->try_stmt.catch_stmt);
      free_statement(parser, statement->try_stmt.finally_block);
      free(statement);
      return;
    }
    case CATCH_STMT: {
      free_expression(parser, statement->catch_stmt.catch_exception);
      free_expression(parser, statement->catch_stmt.as);
      free_statement(parser, statement->catch_stmt.catch_block);
      free(statement);
      return;
    }
    case THROW_STMT: {
      free_expression(parser, statement->throw_stmt.throwable);
      free(statement);
      return;
    }
    case CLASS_STMT: {
      free_expression(parser, statement->class_stmt.super_class);
      for (size_t i = 0; i < statement->class_stmt.methods_num; ++i) {
        free_statement(parser, statement->class_stmt.methods[i]);
      }
      free(statement->class_stmt.methods);
      for (size_t i = 0; i < statement->class_stmt.static_methods_num; ++i) {
        free_statement(parser, statement->class_stmt.static_methods[i]);
      }
      free(statement->class_stmt.static_methods);
      free(statement);
      return;
    }
    default:free(statement);
      return;
  }
}
void free_statements(Parser *parser, StatementArrayList *statements) {
  if (statements != NULL) {
    for (size_t i = 0; i < statements->size; ++i) {
      free_statement(parser, Statementget_data_arraylist(statements, i));
    }
  }
}
char *print_statements(Parser *parser, StatementArrayList *statements) {
  json_value v;
  v.type = JSON_NULL;
  init_as_array(&v, 0);
  for (size_t i = 0; i < statements->size; i++) {
    json_value *t = tree_json(parser, (ParseTree *) Statementget_data_arraylist(statements, i));
    *insert_json_array(&v, i) = *t;
  }
  char *ast = json_stringify(&v, NULL);
  free_json_value(&v);
  return ast;
}

static json_value *tree_json(Parser *parser, ParseTree *tree) {
  ParseType type = tree->type;
  if (is_statement(type)) {
    return statement_printer(parser, (Statement *) tree);
  } else {
    return expression_printer(parser, (Expression *) tree);
  }
}
char *print_tree(Parser *parser, ParseTree *tree) {
  json_value *v = tree_json(parser, tree);
  if (v == NULL) return NULL;
  char *ast = json_stringify(v, NULL);
  free_json_value(v);
  free(v);
  return ast;
}

Expression *parse_expression(Parser *parser, Precedence precedence) {
  advance(parser);
  ParseFn prefix = get_rule(parser, parser->prev.type)->prefix;
  if (prefix == NULL) {
    error(parser, "Expect expression.");
    return NULL;
  }
  Expression *left = prefix(parser, parser->prev, NULL);
  while (precedence <= precedence_of(parser, parser->current.type)) {
    advance(parser);
    ParseFn infix = get_rule(parser, parser->prev.type)->infix;
    left = infix(parser, parser->prev, left);
  }
  return left;
}

static ParseRule *get_rule(Parser *parser, TokenType type) {
  return &rules[type];
}

static Precedence precedence_of(Parser *parser, TokenType type) {
  return get_rule(parser, type)->precedence;
}

static bool is_right_associative(Parser *parser, TokenType type) {
  if (type == TOKEN_EXPONENT) return true;
  return false;
}

static void advance(Parser *parser) {
  parser->prev = parser->current;
  for (;;) {
    parser->current = scan_token(parser->scanner);
    if (parser->current.type != TOKEN_ERROR) break;
    error_at_current(parser, parser->current.start);
  }
}

static void error_at_current(Parser *parser, const char *msg) {
  error_at(parser, &parser->current, msg);
}

static void error(Parser *parser, const char *msg) {
  error_at(parser, &parser->prev, msg);
}

static void error_at(Parser *parser, Token *token, const char *msg) {
  if (parser->panic_mode) return;
  parser->panic_mode = true;
  fprintf(stderr, "[line %zu] Error", token->line);
#ifdef WASM_LOG
  char err[100];
  sprintf(err,"[status][error]-ZHI Parser: [line %zu] Error", token->line);
#endif

